# bazel-demo-server

./: MODULE.bazel  README.md
server/: BUILD.bazel  server.py
