load("@rules_proto_grpc_python//:defs.bzl", "python_grpc_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "server",
    srcs = [
        "server.py",
    ],
    data = ["@bazel_demo_schema//data:routeguide_features"],
    imports = ["."],
    python_version = "PY3",
    deps = [
        "@bazel_demo_schema//common:resources",
        "@bazel_demo_schema//protos:routeguide_py_grpc",
    ],
)
